@@ -656,6 +656,9 @@ INSERT INTO `gibbonPermission` (`permissionID` ,`gibbonRoleID` ,`gibbonActionID`
 INSERT INTO `gibbonPermission` (`permissionID` ,`gibbonRoleID` ,`gibbonActionID`) VALUES (NULL , '2', (SELECT gibbonActionID FROM gibbonAction JOIN gibbonModule ON (gibbonAction.gibbonModuleID=gibbonModule.gibbonModuleID) WHERE gibbonModule.name='Planner' AND gibbonAction.name='Import Outcomes'));end
 CREATE TABLE `gibbonUnitBlockStar` (`gibbonUnitBlockStarID` int(14) unsigned zerofill NOT NULL AUTO_INCREMENT,  `gibbonUnitBlockID` int(12) unsigned zerofill NOT NULL,  `gibbonPersonID` int(10) unsigned zerofill NOT NULL,    PRIMARY KEY (`gibbonUnitBlockStarID`)) ENGINE=InnoDB DEFAULT CHARSET=utf8;end
 UPDATE gibbonAction SET entrySidebar='N' WHERE name LIKE 'Manage Messages%' AND gibbonModuleID=(SELECT gibbonModuleID FROM gibbonModule WHERE name='Messenger');end
+UPDATE gibbonPerson SET title=RTRIM(title);end
+UPDATE gibbonPersonUpdate SET title=RTRIM(title);end
+UPDATE gibbonApplicationForm SET parent1title=RTRIM(parent1title), parent2title=RTRIM(parent2title);end
 ";
 
 ?>
