@@ -1506,10 +1506,10 @@ function formatName( $title, $preferredName, $surname, $roleCategory, $reverse=F
 	if ($roleCategory=="Staff" OR $roleCategory=="Other") {
 		if ($informal==FALSE) {
 			if ($reverse==TRUE) {
-				$output=$title . $surname . ", " . strtoupper(substr($preferredName,0,1)) ;
+				$output=$title . " " . $surname . ", " . strtoupper(substr($preferredName,0,1)) ;
 			}
 			else {
-				$output=$title . strtoupper(substr($preferredName,0,1)) . ". " . $surname ;
+				$output=$title . " " . strtoupper(substr($preferredName,0,1)) . ". " . $surname ;
 			}
 		}
 		else {
@@ -1524,10 +1524,10 @@ function formatName( $title, $preferredName, $surname, $roleCategory, $reverse=F
 	else if ($roleCategory=="Parent") {
 		if ($informal==FALSE) {
 			if ($reverse==TRUE) {
-				$output=$title . $surname . ", " . $preferredName ;
+				$output=$title . " " . $surname . ", " . $preferredName ;
 			}
 			else {
-				$output=$title . $preferredName . " " . $surname ;
+				$output=$title . " " . $preferredName . " " . $surname ;
 			}
 		}
 		else {
